<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et_width"
            android:text="@string/width" />

        <EditText
            android:id="@+id/et_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et_length"
            android:text="@string/length" />

        <EditText
            android:id="@+id/et_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et_height"
            android:text="@string/height" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_calculate_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_volume" />

        <Button
            android:id="@+id/btn_calculate_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_area"/>

        <Button
            android:id="@+id/btn_calculate_perimeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_perimeter" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>